--- a/MEDIAR_(model1).ipynb
+++ b/MEDIAR_(model1).ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/samik1986/3D_Developing_brain/blob/main/MEDIAR_(model1).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "biuER5L5P_bp"
       },
       "source": [
@@ -688,7 +698,21 @@
             "--------------------------------------------------\n",
             "[Round 3/100]\n",
             ">>> Train Epoch\n",
-            " 55% 90/164 [00:55<00:49,  1.49it/s]"
+            "100% 164/164 [01:37<00:00,  1.69it/s]\n",
+            "{'Train_Dice_Loss': 0.1644}\n",
+            "\n",
+            ">>> TuningSet Epoch\n",
+            "100% 70/70 [00:16<00:00,  4.27it/s]\n",
+            "Cell Counts Total: (5717)\n",
+            "{'TuningSet_Cell_Count': 5717}\n",
+            "\n",
+            "\n",
+            ">>>> Update Best Model with score: 5717\n",
+            "\n",
+            "--------------------------------------------------\n",
+            "[Round 4/100]\n",
+            ">>> Train Epoch\n",
+            " 72% 118/164 [01:09<00:33,  1.39it/s]"
           ]
         }
       ],
@@ -1122,7 +1146,8 @@
         "azQ19p4ZaAzB",
         "AnZBiCBLMfA0",
         "bYH3pAxlPFky"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
